[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gobler-wealth-agentcore"
version = "0.1.0"
description = "Gobler - a tax-aware personal wealth agent on Strands + Bedrock AgentCore. Built on AWS's Fullstack AgentCore Solution Template (FAST)."
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.10"
authors = [
    { name = "Oussama Ben Lagha" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

# Core dependencies for gateway utilities and scripts
dependencies = [
    "boto3>=1.34.0",
    "requests>=2.31.0",
    "PyYAML>=6.0.1",
    "colorama>=0.4.6",
]

[project.optional-dependencies]
# Development dependencies
dev = ["pytest>=7.0.0", "ruff>=0.1.0", "mypy>=1.0.0"]

# Strands agent dependencies (for local development)
agent-strands = [
    "strands-agents==1.16.0",
    "bedrock-agentcore[strands-agents]==1.0.6",
    "mcp==1.23.0",
]

# All dependencies for local development
all = [
    "gobler-wealth-agentcore[dev,agent-strands]",
]

[project.urls]
Homepage = "https://github.com/laghao/gobler-wealth-agentcore"
Repository = "https://github.com/laghao/gobler-wealth-agentcore"
Issues = "https://github.com/laghao/gobler-wealth-agentcore/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["gateway*", "scripts*"]
exclude = ["tests*", "infra-cdk*", "frontend*", "patterns*"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "S", "B", "A", "C4", "T20"]
ignore = ["S101", "S603", "S607"]                                    # Allow assert, subprocess calls

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]  # Allow assert in tests
"test-scripts/*.py" = ["E402"]  # Allow imports after sys.path modification

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
